--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -40,4 +40,4 @@
 @import "minimal-mistakes/print";
 
 // personal font
-@import url("https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap&family=IBM+Plex+Sans+KR");
